# SaveMyEyes

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE  README.md  generate_icons.py  index.html  package-lock.json  package.json
.github/workflows/: release.yml
macos/: AppIcon.icns  Cargo.toml  Info.plist  build-app.sh  create-icon.sh
macos/src/: app.rs  autostart.rs  config.rs  hotkeys.rs  main.rs  overlay.rs  tray.rs  updater.rs
macos/src/ui/: mod.rs  settings.rs  theme.rs
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  updater.rs
src/: config.rs  hotkeys.rs  main.rs  main.ts  overlay.rs  styles.css  tray.rs  updater.rs
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/installer-assets/: LICENSE-SETUP.txt
src-tauri/src/: keyboard_hook.rs  lib.rs  main.rs
src-tauri/src/overlay/: macos.rs  mod.rs  windows.rs
src/ui/: controls.rs  mod.rs  painting.rs  theme.rs
windows/: Cargo.toml
windows/src/: autostart.rs  config.rs  main.rs  overlay.rs  updater.rs
windows/src/ui/: controls.rs  painting.rs  theme.rs
