[package]
name = "savemyeyes"
version = "0.9.3"
description = "A lightweight screen dimmer utility for Windows"
authors = ["KraftPixel"]
edition = "2021"

[[bin]]
name = "savemyeyes"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
dirs = "5"
ureq = "2"

[dependencies.windows]
version = "0.61"
features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Shell",
    "Win32_UI_Controls",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_UI_Accessibility",
    "Win32_System_LibraryLoader",
    "Win32_System_Registry",
    "Win32_System_Threading",
    "Win32_System_Com",
    "Win32_Security",
]

[build-dependencies]
embed-resource = "3"

[profile.release]
opt-level = "s"
lto = true
strip = true
